# MLOps-Practice

./: .gitignore  data.py  inference.py  model.py  pyproject.toml  train.py
config/: config.yaml  config.yml
config/model/: default.yml
config/processing/: default.yaml  default.yml
config/training/: default.yaml  default.yml
