[project]
name = "mlops-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9, <3.12"
dependencies = [
    "datasets>=2.14.0",
    "dvc>=2.9.5",
    "hydra-colorlog>=1.2.0",
    "hydra-core>=1.3.2",
    "matplotlib>=3.9.4",
    "omegaconf>=2.3.0",
    "pytorch-lightning==1.2.10",
    "scikit-learn==0.24.2",
    "seaborn>=0.13.2",
    "setuptools==80.10.2",
    "torchmetrics>=0.2.0",
    "transformers>=4.30.0",
    "wandb>=0.25.0",
    "numpy<2.0.0",
    "pandas"
]
